# hwwtui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: build-bundles.yaml  ci.yaml
crates/bridge/: Cargo.toml
crates/bridge/src/: generic.rs  lib.rs  trezor.rs  uhid.rs
crates/bridge/tests/: bb02_repro.rs  bitbox02_e2e.rs  bridge_integration.rs  coldcard_e2e.rs  e2e.rs  signing_e2e.rs
crates/bundler/: Cargo.toml
crates/bundler/src/: download.rs  lib.rs  manifest.rs  storage.rs
crates/emulators/: Cargo.toml
crates/emulators/src/: generic.rs  lib.rs  trezor.rs  wallet_config.rs
crates/hwwtui/: Cargo.toml
crates/hwwtui/src/: app.rs  config.rs  main.rs  ui.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  trezor.rs  trezor_debug.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  TODO.md  WALLETS.md
scripts/: coldcard-headless.sh
scripts/docker/: Dockerfile.bitbox02  Dockerfile.coldcard  Dockerfile.jade  Dockerfile.ledger  Dockerfile.specter  Dockerfile.trezor
udev/: 99-hwwtui.rules
