[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
protocol = { path = "../protocol" }
emulators = { path = "../emulators" }
uhid-virt = { workspace = true }
