[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
protocol = { path = "../protocol" }
emulators = { path = "../emulators" }
uhid-virt = { workspace = true }

[dev-dependencies]
hidapi = "2"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
bundler = { path = "../bundler" }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
bitbox-api = { version = "0.9.0", default-features = false, features = ["simulator", "usb", "multithreaded", "tokio"] }
