[package]
name = "hwwtui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hwwtui"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

emulators = { path = "../emulators" }
bridge = { path = "../bridge" }
protocol = { path = "../protocol" }
bundler = { path = "../bundler" }
bitbox-api = { version = "0.9.0", default-features = false, features = ["simulator", "multithreaded", "tokio"] }
